<resources>
    <string name="app_name">PizzaRestaurant</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="filter_options">
        <item>Show All</item>
        <item>Price Ascending</item>
        <item>Price Descending</item>
        <item>Size Small</item>
        <item>Size Medium</item>
        <item>Size Large</item>
        <item>Category Chicken</item>
        <item>Category Beef</item>
        <item>Category Veggies</item>
        <item>Category Others</item>
    </string-array>
    <string-array name="category_options">
        <item>Chicken</item>
        <item>Beef</item>
        <item>Veggies</item>
        <item>Others</item>
    </string-array>
    <string name="title_activity_client">ClientActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="res_history">In 1976, a small bakery in Ramallah began offering a new twist on an old favorite - pizza. Inspired by generations of pita bread know-how and a sprinkle of global influence, they crafted pizzas that were both familiar and exciting. This tradition of innovation continues at Advance Pizza, where we honor the classics (Margarita, anyone?) while tempting your tastebuds with unique flavors like Tandoori Chicken and Pesto Chicken. Come explore the world of pizza with us.</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pizza_menu">Pizza Menu</string>
    <string name="your_orders">Your Orders</string>
    <string name="your_favourites">Your Favourites</string>
    <string name="call_or_find_us">Call or Find us</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="add_admin">Add Admin</string>
    <string name="view_orders">View Orders</string>
    <string name="remove_order">Remove Order</string>
    <string name="add_special_offers">Add Special Offers</string>
    <string name="special_offers">Special Offers</string>
    <string name="finances">Finances</string>
</resources>