<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_pizza_menu"
            android:icon="@drawable/ic_pizza_menu"
            android:title="@string/pizza_menu" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_orders"
            android:title="@string/your_orders" />
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/baseline_favorite_24"
            android:title="@string/your_favourites" />
        <item
            android:id="@+id/nav_view_special"
            android:icon="@drawable/baseline_local_offer_24"
            android:title="@string/special_offers" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile_24"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_find_us"
            android:icon="@drawable/baseline_local_phone_24"
            android:title="@string/call_or_find_us" />
    </group>
    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/baseline_logout_24"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>