<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile_24"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_add_admin"
            android:icon="@drawable/shield_account"
            android:title="@string/add_admin" />
        <item
            android:id="@+id/nav_view_all_orders"
            android:icon="@drawable/ic_orders"
            android:title="@string/view_orders" />
        <item
            android:id="@+id/nav_add_special_offers"
            android:icon="@drawable/plus_box_multiple"
            android:title="@string/add_special_offers" />
        <item
            android:id="@+id/nav_finances"
            android:icon="@drawable/finance"
            android:title="@string/finances" />
    </group>
    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/baseline_logout_24"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>