<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.pizzarestaurant.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.pizzarestaurant.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.pizzarestaurant.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.pizzarestaurant.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_pizza_menu"
        android:name="com.example.pizzarestaurant.ui.pizza_menu.PizzaMenuFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_pizza_menu" />
    <fragment
        android:id="@+id/nav_orders"
        android:name="com.example.pizzarestaurant.ui.orders.OrdersFragment"
        android:label="Your Orders"
        tools:layout="@layout/fragment_orders" />
    <fragment
        android:id="@+id/nav_find_us"
        android:name="com.example.pizzarestaurant.ui.findus.FindUsFragment"
        android:label="Find Us"
        tools:layout="@layout/fragment_find_us" />
    <activity
        android:id="@+id/nav_logout"
        android:name="com.example.pizzarestaurant.LoginActivity"
        android:label="@string/logout"
        tools:layout="@layout/activity_login" />
    <fragment
        android:id="@+id/nav_favourites"
        android:name="com.example.pizzarestaurant.ui.favourites.FavouritesFragment"
        android:label="@string/your_favourites"
        tools:layout="@layout/fragment_favourites" />
    <fragment
        android:id="@+id/nav_view_special"
        android:name="com.example.pizzarestaurant.ui.view_special_offers.ViewSpecialOffersFragment"
        android:label="@string/special_offers"
        tools:layout="@layout/fragment_view_special_offers" />
</navigation>