<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_profile">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.pizzarestaurant.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_add_admin"
        android:name="com.example.pizzarestaurant.ui.add_admin.AddAdminFragment"
        android:label="@string/add_admin"
        tools:layout="@layout/fragment_add_admin" />
    <fragment
        android:id="@+id/nav_view_all_orders"
        android:name="com.example.pizzarestaurant.ui.admin_orders.ViewAllOrdersFragment"
        android:label="@string/view_orders"
        tools:layout="@layout/fragment_view_all_orders" />
    <fragment
        android:id="@+id/nav_add_special_offers"
        android:name="com.example.pizzarestaurant.ui.add_special.AddSpecialOffersFragment"
        android:label="@string/view_orders"
        tools:layout="@layout/fragment_add_special_offers" />
    <fragment
        android:id="@+id/nav_finances"
        android:name="com.example.pizzarestaurant.ui.finances.FinancesFragment"
        android:label="@string/finances"
        tools:layout="@layout/fragment_finances" />
    <activity
        android:id="@+id/nav_logout"
        android:name="com.example.pizzarestaurant.LoginActivity"
        android:label="@string/logout"
        tools:layout="@layout/activity_login" />

</navigation>